fixed width of question section on landing page on small screen sizes

--- a/assets/styles/information-section.css
+++ b/assets/styles/information-section.css
@@ -64,5 +64,6 @@
         display: flex;
         flex-direction: column;
         align-items: start;
+        width: 100%;
     }
 }
